fix for Nikita
